// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton should render component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c3 {
  transition: transform 0.3s ease-in-out;
  transform: rotate(0deg);
}

.c3 *[fill^='#'] {
  fill: #717681;
}

.c3:hover *[fill^='#'] {
  fill: #0046E2;
}

.c3[data-disabled] {
  pointer-events: none;
}

.c3[data-disabled] *[fill^='#'] {
  fill: #B0B5BD;
}

.c2 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  overflow: hidden;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  height: 24px;
}

.c2 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c2 {
  height: 20px;
}

[data-dimension='s'] .c2>svg {
  width: 20px;
  height: 20px;
}

.c1 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: 4px;
  appearance: none;
  vertical-align: middle;
  pointer-events: all;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: #B0B5BD;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: #4E535D;
  color: #4E535D;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E535D;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0:hover {
  cursor: pointer;
}

<body>
    <div>
      <button
        aria-expanded="false"
        class="c0 menu-button-with-dropdown"
        data-appearance="primary"
        data-dimension="l"
        data-testid="btn"
        type="button"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <span>
            test
          </span>
          <div
            class=""
          >
            <div
              aria-hidden="true"
              class="c3"
            />
          </div>
        </div>
      </button>
    </div>
  </body>,
  "container": .c3 {
  transition: transform 0.3s ease-in-out;
  transform: rotate(0deg);
}

.c3 *[fill^='#'] {
  fill: #717681;
}

.c3:hover *[fill^='#'] {
  fill: #0046E2;
}

.c3[data-disabled] {
  pointer-events: none;
}

.c3[data-disabled] *[fill^='#'] {
  fill: #B0B5BD;
}

.c2 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  overflow: hidden;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  height: 24px;
}

.c2 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c2 {
  height: 20px;
}

[data-dimension='s'] .c2>svg {
  width: 20px;
  height: 20px;
}

.c1 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: 4px;
  appearance: none;
  vertical-align: middle;
  pointer-events: all;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: #B0B5BD;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: #4E535D;
  color: #4E535D;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E535D;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0:hover {
  cursor: pointer;
}

<div>
    <button
      aria-expanded="false"
      class="c0 menu-button-with-dropdown"
      data-appearance="primary"
      data-dimension="l"
      data-testid="btn"
      type="button"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <span>
          test
        </span>
        <div
          class=""
        >
          <div
            aria-hidden="true"
            class="c3"
          />
        </div>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuButton should render component with loading state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  transition: transform 0.3s ease-in-out;
  transform: rotate(0deg);
}

.c6 *[fill^='#'] {
  fill: #717681;
}

.c6:hover *[fill^='#'] {
  fill: #0046E2;
}

.c6[data-disabled] {
  pointer-events: none;
}

.c6[data-disabled] *[fill^='#'] {
  fill: #B0B5BD;
}

.c1 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 svg {
  animation: cilQsd 1s linear infinite;
}

.c1 svg path {
  fill: #FFFFFF;
}

.c5 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  overflow: hidden;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  height: 24px;
}

.c5 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c5>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c5 {
  height: 20px;
}

[data-dimension='s'] .c5>svg {
  width: 20px;
  height: 20px;
}

.c2 {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.c3 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: 4px;
  appearance: none;
  vertical-align: middle;
  pointer-events: none;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: #B0B5BD;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: #4E535D;
  color: #4E535D;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E535D;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 .c4 {
  visibility: hidden;
}

.c0:hover {
  cursor: pointer;
}

<body>
    <div>
      <button
        aria-expanded="false"
        class="c0 menu-button-with-dropdown"
        data-appearance="primary"
        data-dimension="l"
        data-testid="btn"
        type="button"
      >
        <div
          aria-live="assertive"
          class="c1 c2"
          role="alert"
        >
          <div />
        </div>
        <div
          class="c3"
        />
        <div
          class="c4 c5"
        >
          <span>
            test
          </span>
          <div
            class=""
          >
            <div
              aria-hidden="true"
              class="c6"
            />
          </div>
        </div>
      </button>
    </div>
  </body>,
  "container": .c6 {
  transition: transform 0.3s ease-in-out;
  transform: rotate(0deg);
}

.c6 *[fill^='#'] {
  fill: #717681;
}

.c6:hover *[fill^='#'] {
  fill: #0046E2;
}

.c6[data-disabled] {
  pointer-events: none;
}

.c6[data-disabled] *[fill^='#'] {
  fill: #B0B5BD;
}

.c1 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 svg {
  animation: cilQsd 1s linear infinite;
}

.c1 svg path {
  fill: #FFFFFF;
}

.c5 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  overflow: hidden;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  height: 24px;
}

.c5 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c5>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c5 {
  height: 20px;
}

[data-dimension='s'] .c5>svg {
  width: 20px;
  height: 20px;
}

.c2 {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.c3 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: 4px;
  appearance: none;
  vertical-align: middle;
  pointer-events: none;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: #B0B5BD;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: #4E535D;
  color: #4E535D;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E535D;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 .c4 {
  visibility: hidden;
}

.c0:hover {
  cursor: pointer;
}

<div>
    <button
      aria-expanded="false"
      class="c0 menu-button-with-dropdown"
      data-appearance="primary"
      data-dimension="l"
      data-testid="btn"
      type="button"
    >
      <div
        aria-live="assertive"
        class="c1 c2"
        role="alert"
      >
        <div />
      </div>
      <div
        class="c3"
      />
      <div
        class="c4 c5"
      >
        <span>
          test
        </span>
        <div
          class=""
        >
          <div
            aria-hidden="true"
            class="c6"
          />
        </div>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuButton should render component with skeleton state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c4 {
  transition: transform 0.3s ease-in-out;
  transform: rotate(0deg);
}

.c4 *[fill^='#'] {
  fill: #717681;
}

.c4:hover *[fill^='#'] {
  fill: #0046E2;
}

.c4[data-disabled] {
  pointer-events: none;
}

.c4[data-disabled] *[fill^='#'] {
  fill: #B0B5BD;
}

.c3 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  overflow: hidden;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  height: 24px;
}

.c3 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c3>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3>svg {
  width: 20px;
  height: 20px;
}

.c1 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: 0;
  appearance: none;
  vertical-align: middle;
  pointer-events: none;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  animation: dZhwyk 2s ease infinite;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: #B0B5BD;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: #4E535D;
  color: #4E535D;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E535D;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 .c2 {
  visibility: hidden;
}

.c0:hover {
  cursor: pointer;
}

<body>
    <div>
      <button
        aria-expanded="false"
        class="c0 menu-button-with-dropdown"
        data-appearance="primary"
        data-dimension="l"
        data-testid="btn"
        disabled=""
        type="button"
      >
        <div
          class="c1"
        />
        <div
          class="c2 c3"
        >
          <span>
            test
          </span>
          <div
            class=""
          >
            <div
              aria-hidden="true"
              class="c4"
            />
          </div>
        </div>
      </button>
    </div>
  </body>,
  "container": .c4 {
  transition: transform 0.3s ease-in-out;
  transform: rotate(0deg);
}

.c4 *[fill^='#'] {
  fill: #717681;
}

.c4:hover *[fill^='#'] {
  fill: #0046E2;
}

.c4[data-disabled] {
  pointer-events: none;
}

.c4[data-disabled] *[fill^='#'] {
  fill: #B0B5BD;
}

.c3 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  overflow: hidden;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  height: 24px;
}

.c3 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c3>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c3 {
  height: 20px;
}

[data-dimension='s'] .c3>svg {
  width: 20px;
  height: 20px;
}

.c1 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: 0;
  appearance: none;
  vertical-align: middle;
  pointer-events: none;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  animation: dZhwyk 2s ease infinite;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: #B0B5BD;
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B0B5BD;
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: #4E535D;
  color: #4E535D;
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E535D;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B0B5BD;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B0B5BD;
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0 .c2 {
  visibility: hidden;
}

.c0:hover {
  cursor: pointer;
}

<div>
    <button
      aria-expanded="false"
      class="c0 menu-button-with-dropdown"
      data-appearance="primary"
      data-dimension="l"
      data-testid="btn"
      disabled=""
      type="button"
    >
      <div
        class="c1"
      />
      <div
        class="c2 c3"
      >
        <span>
          test
        </span>
        <div
          class=""
        >
          <div
            aria-hidden="true"
            class="c4"
          />
        </div>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
